--- a/requirements/micromouse-osx.yml
+++ b/requirements/micromouse-osx.yml
@@ -1,236 +1,98 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
 name: micromouse
 channels:
+- anaconda-fusion
 - defaults
 dependencies:
-- _license=1.1=py27_1
-- _nb_ext_conf=0.4.0=py27_1
-- alabaster=0.7.10=py27_0
-- anaconda=custom=py27_0
-- anaconda-clean=1.1.0=py27_0
-- anaconda-client=1.6.3=py27_0
-- anaconda-navigator=1.6.4=py27_0
-- anaconda-project=0.6.0=py27_0
-- appnope=0.1.0=py27_0
-- appscript=1.0.1=py27_0
-- argcomplete=1.0.0=py27_1
-- asn1crypto=0.22.0=py27_0
-- astroid=1.5.3=py27_0
-- astropy=2.0.2=py27heac18bc_4
-- babel=2.5.0=py27_0
-- backports=1.0=py27_0
-- backports_abc=0.5=py27_0
-- beautifulsoup4=4.6.0=py27_0
-- bitarray=0.8.1=py27_0
-- bkcharts=0.2=py27_0
-- blaze=0.10.1=py27_0
-- bleach=1.5.0=py27_0
-- bokeh=0.12.7=py27_0
-- boto=2.48.0=py27_0
-- bottleneck=1.2.1=np113py27_0
-- cdecimal=2.3=py27_2
-- certifi=2016.2.28=py27_0
-- cffi=1.10.0=py27_0
-- chardet=3.0.4=py27_0
-- chest=0.2.3=py27_0
-- click=6.7=py27_0
-- cloudpickle=0.4.0=py27_0
-- clyent=1.2.2=py27_0
-- colorama=0.3.9=py27_0
-- conda=4.3.25=py27_0
-- conda-build=3.0.19=py27haae31bb_0
-- conda-env=2.6.0=0
-- conda-verify=2.0.0=py27_0
-- configobj=5.0.6=py27_0
-- configparser=3.5.0=py27_0
-- contextlib2=0.5.5=py27_0
-- cryptography=1.8.1=py27_0
-- curl=7.52.1=0
-- cycler=0.10.0=py27_0
-- cython=0.26=py27_0
-- cytoolz=0.8.2=py27_0
-- dask=0.15.2=py27_0
-- datashape=0.5.4=py27_0
-- decorator=4.1.2=py27_0
-- dill=0.2.6=py27_0
-- distributed=1.18.1=py27_0
-- docutils=0.14=py27_0
-- dynd-python=0.7.2=py27_0
-- entrypoints=0.2.3=py27_0
-- enum34=1.1.6=py27_0
-- et_xmlfile=1.0.1=py27_0
-- fastcache=1.0.2=py27_1
-- filelock=2.0.7=py27_0
-- flask=0.12.2=py27_0
-- flask-cors=3.0.3=py27_0
-- freetype=2.5.5=2
-- funcsigs=1.0.2=py27_0
-- functools32=3.2.3.2=py27_0
-- functools_lru_cache=1.4=py27_0
-- futures=3.1.1=py27_0
-- get_terminal_size=1.0.0=py27_0
-- gevent=1.2.2=py27_0
-- glob2=0.5=py27_0
-- greenlet=0.4.12=py27_0
-- grin=1.2.1=py27_3
-- h5py=2.7.0=np113py27_0
-- hdf5=1.8.17=2
-- heapdict=1.0.0=py27_1
-- html5lib=0.9999999=py27_0
-- icu=54.1=0
-- idna=2.6=py27_0
-- imagesize=0.7.1=py27_0
-- ipaddress=1.0.18=py27_0
-- ipykernel=4.6.1=py27_0
-- ipython=5.3.0=py27_0
-- ipython_genutils=0.2.0=py27_0
-- ipywidgets=6.0.0=py27_0
-- isort=4.2.15=py27_0
-- itsdangerous=0.24=py27_0
-- jbig=2.1=0
-- jdcal=1.3=py27_0
-- jedi=0.10.2=py27_2
-- jinja2=2.9.6=py27_0
-- jpeg=9b=0
-- jsonschema=2.6.0=py27_0
-- jupyter=1.0.0=py27_3
-- jupyter_client=5.1.0=py27_0
-- jupyter_console=5.2.0=py27_0
-- jupyter_core=4.3.0=py27_0
-- lazy-object-proxy=1.3.1=py27_0
-- libdynd=0.7.2=0
-- libiconv=1.14=0
-- libpng=1.6.30=1
-- libtiff=4.0.6=3
-- libxml2=2.9.4=0
-- libxslt=1.1.29=0
-- llvmlite=0.20.0=py27_0
-- locket=0.2.0=py27_1
-- lxml=3.8.0=py27_0
-- markupsafe=1.0=py27_0
-- matplotlib=2.0.2=np113py27_0
-- mistune=0.7.4=py27_0
-- mkl=2017.0.3=0
-- mkl-service=1.1.2=py27_3
-- mpmath=0.19=py27_1
-- msgpack-python=0.4.8=py27_0
-- multipledispatch=0.4.9=py27_0
-- navigator-updater=0.1.0=py27_0
-- nb_anacondacloud=1.4.0=py27_0
-- nb_conda=2.2.0=py27_0
-- nb_conda_kernels=2.1.0=py27_0
-- nbconvert=5.2.1=py27_0
-- nbformat=4.4.0=py27_0
-- nbpresent=3.0.2=py27_0
-- networkx=1.11=py27_0
-- nltk=3.2.4=py27_0
-- nose=1.3.7=py27_1
-- notebook=5.0.0=py27_0
-- numba=0.35.0=np113py27_0
-- numexpr=2.6.2=np113py27_0
-- numpy=1.13.1=py27_0
-- numpydoc=0.7.0=py27_0
-- odo=0.5.1=py27_0
-- olefile=0.44=py27_0
-- openpyxl=2.4.8=py27_0
-- openssl=1.0.2l=0
-- packaging=16.8=py27_0
-- pandas=0.20.3=py27_0
-- pandocfilters=1.4.2=py27_0
-- partd=0.3.8=py27_0
-- path.py=10.3.1=py27_0
-- pathlib2=2.3.0=py27_0
-- patsy=0.4.1=py27_0
-- pep8=1.7.0=py27_0
-- pexpect=4.2.1=py27_0
-- pickleshare=0.7.4=py27_0
-- pillow=4.2.1=py27_0
-- pip=9.0.1=py27_1
-- pkginfo=1.4.1=py27_0
-- ply=3.10=py27_0
-- prompt_toolkit=1.0.15=py27_0
-- psutil=5.2.2=py27_0
-- ptyprocess=0.5.2=py27_0
-- py=1.4.34=py27_0
-- pyasn1=0.2.3=py27_0
-- pyaudio=0.2.7=py27_0
-- pycodestyle=2.3.1=py27_0
-- pycosat=0.6.2=py27_0
-- pycparser=2.18=py27_0
-- pycrypto=2.6.1=py27_6
-- pycurl=7.43.0=py27_2
-- pyflakes=1.6.0=py27_0
-- pygments=2.2.0=py27_0
-- pylint=1.7.2=py27_0
-- pyodbc=4.0.17=py27_0
-- pyopenssl=17.0.0=py27_0
-- pyparsing=2.2.0=py27_0
-- pyqt=5.6.0=py27_2
-- pytables=3.4.2=np113py27_0
-- pytest=3.2.1=py27_0
-- python=2.7.13=0
-- python-dateutil=2.6.1=py27_0
-- python.app=1.2=py27_4
-- pytz=2017.2=py27_0
-- pywavelets=0.5.2=np113py27_0
-- pyyaml=3.12=py27_0
-- pyzmq=16.0.2=py27_0
-- qt=5.6.2=2
-- qtawesome=0.4.4=py27_0
-- qtconsole=4.3.1=py27_0
-- qtpy=1.3.1=py27_0
-- readline=6.2=2
-- redis=3.2.0=0
-- redis-py=2.10.5=py27_0
-- requests=2.14.2=py27_0
-- rope=0.9.4=py27_1
-- ruamel_yaml=0.11.14=py27_1
-- scandir=1.5=py27_0
-- scikit-image=0.13.0=np113py27_0
-- scikit-learn=0.19.0=np113py27_0
-- scipy=0.19.1=np113py27_0
-- seaborn=0.8=py27_0
-- setuptools=36.4.0=py27_0
-- simplegeneric=0.8.1=py27_1
-- singledispatch=3.4.0.3=py27_0
-- sip=4.18=py27_0
-- six=1.10.0=py27_0
-- snowballstemmer=1.2.1=py27_0
-- sockjs-tornado=1.0.3=py27_0
-- sortedcollections=0.5.3=py27_0
-- sortedcontainers=1.5.7=py27_0
-- sphinx=1.6.3=py27_0
-- sphinxcontrib=1.0=py27_0
-- sphinxcontrib-websupport=1.0.1=py27_0
-- spyder=3.2.3=py27_0
-- sqlalchemy=1.1.13=py27_0
-- sqlite=3.13.0=0
-- ssl_match_hostname=3.5.0.1=py27_0
-- statsmodels=0.8.0=np113py27_0
-- subprocess32=3.2.7=py27_0
-- sympy=1.1.1=py27_0
-- tblib=1.3.2=py27_0
-- terminado=0.6=py27_0
-- testpath=0.3.1=py27_0
-- tk=8.5.18=0
-- toolz=0.8.2=py27_0
-- tornado=4.5.2=py27_0
-- traitlets=4.3.2=py27_0
-- typing=3.6.2=py27_0
-- unicodecsv=0.14.1=py27_0
-- unixodbc=2.3.4=0
-- wcwidth=0.1.7=py27_0
-- werkzeug=0.12.2=py27_0
-- wheel=0.29.0=py27_0
-- widgetsnbextension=3.0.2=py27_0
-- wrapt=1.10.11=py27_0
-- xlrd=1.1.0=py27_0
-- xlsxwriter=0.9.8=py27_0
-- xlwings=0.11.4=py27_0
-- xlwt=1.3.0=py27_0
-- xz=5.2.3=0
-- yaml=0.1.6=0
-- zict=0.1.2=py27_0
-- zlib=1.2.11=0
+- appnope=0.1.0=py27hb466136_0
+- backports=1.0=py27hb4f9756_1
+- backports.shutil_get_terminal_size=1.0.0=py27hc9115de_2
+- backports_abc=0.5=py27h6972548_0
+- bleach=2.0.0=py27ha7d1710_0
+- ca-certificates=2017.08.26=ha1e5d58_0
+- certifi=2017.7.27.1=py27h482ffc0_0
+- configparser=3.5.0=py27hc7edf1b_0
+- dbus=1.10.22=h50d9ad6_0
+- decorator=4.1.2=py27h9f877ea_0
+- entrypoints=0.2.3=py27hd680fb1_2
+- enum34=1.1.6=py27hf475452_1
+- expat=2.2.4=h8f26bf8_1
+- functools32=3.2.3.2=py27h8ceab06_1
+- gettext=0.19.8.1=hb0f4f8b_2
+- glib=2.53.6=ha08cb78_1
+- html5lib=0.999999999=py27hec7e2bc_0
+- icu=58.2=hea21ae5_0
+- intel-openmp=2018.0.0=h68bdfb3_7
+- ipykernel=4.6.1=py27h1e70a78_0
+- ipython=5.4.1=py27h2b3d779_1
+- ipython_genutils=0.2.0=py27h8b9a179_0
+- ipywidgets=7.0.0=py27h3e52029_0
+- jinja2=2.9.6=py27h92590e2_1
+- jpeg=9b=haccd157_1
+- jsonschema=2.6.0=py27hd9b497e_0
+- jupyter=1.0.0=py27hec63c99_0
+- jupyter_client=5.1.0=py27hfaf569a_0
+- jupyter_console=5.2.0=py27h9702a86_1
+- jupyter_core=4.3.0=py27hd5161ba_0
+- libcxx=4.0.1=h579ed51_0
+- libcxxabi=4.0.1=hebd6815_0
+- libedit=3.1=hb4e282d_0
+- libffi=3.2.1=hd939716_3
+- libgfortran=3.0.1=h93005f0_2
+- libiconv=1.15=h99df5da_5
+- libpng=1.6.32=hce72d48_2
+- libsodium=1.0.13=hba5e272_2
+- markupsafe=1.0=py27hd3c86fa_1
+- mistune=0.7.4=py27h1658d75_0
+- mkl=2018.0.0=h5ef208c_6
+- nbconvert=5.3.1=py27h6455e4c_0
+- nbformat=4.4.0=py27hddc86d0_0
+- ncurses=6.0=ha932d30_1
+- notebook=5.0.0=py27h5f5981d_2
+- numpy=1.13.3=py27h62f9060_0
+- openssl=1.0.2l=h57f3a61_2
+- pandoc=1.19.2.1=ha5e8f32_1
+- pandocfilters=1.4.2=py27hed78c4e_1
+- pathlib2=2.3.0=py27he09da1e_0
+- pcre=8.41=h29eefc5_0
+- pexpect=4.2.1=py27hc4e4961_0
+- pickleshare=0.7.4=py27h37e3d41_0
+- pip=9.0.1=py27h61def0c_3
+- prompt_toolkit=1.0.15=py27h4a7b9c2_0
+- ptyprocess=0.5.2=py27h70f6364_0
+- pygments=2.2.0=py27h1a556bb_0
+- pyqt=5.6.0=py27hf21fe59_6
+- python=2.7.14=he768d2d_19
+- python-dateutil=2.6.1=py27hd56c96b_1
+- pyzmq=16.0.2=py27he61c07e_2
+- qt=5.6.2=h9975529_14
+- qtconsole=4.3.1=py27hdc90b4f_0
+- readline=7.0=h81b24a6_3
+- scandir=1.6=py27h97aa1ee_0
+- setuptools=36.5.0=py27h2a45cec_0
+- simplegeneric=0.8.1=py27h6db5e31_0
+- singledispatch=3.4.0.3=py27he22c18d_0
+- sip=4.18.1=py27h6300f65_2
+- six=1.11.0=py27h7252ba3_1
+- sqlite=3.20.1=h900c3b0_1
+- ssl_match_hostname=3.5.0.1=py27h8780752_2
+- terminado=0.6=py27he40bf16_0
+- testpath=0.3.1=py27h72d81a5_0
+- tk=8.6.7=hcdce994_1
+- tornado=4.5.2=py27h29aec9e_0
+- traitlets=4.3.2=py27hcf08151_0
+- wcwidth=0.1.7=py27h817c265_0
+- webencodings=0.5.1=py27h19a9f58_1
+- wheel=0.29.0=py27h84bd1c0_1
+- widgetsnbextension=3.0.2=py27h56f70de_1
+- zeromq=4.2.2=h131e0f7_1
+- zlib=1.2.11=h60db283_1
+- pip:
+  - backports-abc==0.5
+  - backports.shutil-get-terminal-size==1.0.0
+  - backports.ssl-match-hostname==3.5.0.1
+  - ipython-genutils==0.2.0
+  - jupyter-client==5.1.0
+  - jupyter-console==5.2.0
+  - jupyter-core==4.3.0
+  - prompt-toolkit==1.0.15
+
